--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
+    "@types/react-datepicker": "^7.0.0",
     "next": "15.2.2",
     "react": "^19.0.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
